main.css
html, body {
    height: 100%;
    width: 100%;
    padding: auto;
    margin: auto;
    background-color: #000;
    text-align: center;
    font-size: 16px;
}

nav {
    font-size: 16px;
    color: #FFFFFF;
	background-color: #000000;
}

.sect {
	height: 100%;
	background-size: cover;
	background-repeat: no-repeat;
	background-attachment: fixed;
	background-position: top left;
	text-align: center;
	padding: 50px;
}

.portfolioItem {
	height: auto;
	text-align: center;
    background-color: #99a9d7;
    padding: 5px;
    margin-bottom: 5px;
	border: 1px outset rgba(255, 255, 255, .6);
}

#navItems {}

#home {
	height: 100%;
	color: #AAAAFF;
    display: flex;
    align-items: center;
    justify-content: center;
    background-image: url("https://s3.amazonaws.com/xaqiri/desert-lightning-1408110525Yi1.jpg");
}

#about {
	text-align: left;
    background-color: #CCAAFF;
}

#about * {
    bottom: 10em;
}

#portfolio {
	height: auto;
	background-color: #BBCCFF;
}

#contact {
	height: auto;
	background-color: #AACCBB;
}

#contact a {
    border-radius: 10px 20px;
    margin-top: 10px; 
}

